<resources>
    <string name="app_name">Acme</string>
    <!-- Direct Strings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo_descrp">Brand Logo Icon</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Captions  -->
    <string name="register_caption">Register to Shop in the Best Supermarket</string>
    <!-- Credit Card Captions-->
    <string name="credit_card_caption">Credit Card Information</string>
    <string name="credit_card_nr_caption">Credit Card Number</string>
    <string name="credit_card_expdate_caption">Expiration Date</string>
    <string name="credit_card_ccv_caption">CCV</string>
    <!-- Home drawer -->
    <string name="profile_caption">Profile</string>
    <string name="history_caption">History</string>
    <string name="vouchers_caption">Vouchers</string>
    <string name="settings_caption">Settings</string>
    <string name="contact_caption">Contact</string>
    <string name="title_activity_home">Home</string>
    <string name="shopping_action">Shopping</string>
    <string name="action_settings">Settings</string>
    <string name="send_caption">Send</string>
    <string name="date_caption">Date:</string>
    <string name="total_caption">Total:</string>
    <string name="email_caption">Email</string>
    <string name="name_caption">Name</string>
    <string name="readQR_caption">Read QR code</string>
    <string name="shopping_cart_caption">Shopping Cart</string>
    <string name="checkout_caption">Checkout</string>
    <string name="contact_text">Please fill out the form below to send us a message
        regarding any problems you may encounter or any other subject.\n\nWe will try to answer you as soon as possible.\n\nThank you.</string>
    <string name="checkout_text">You have vouchers to discount!</string>

</resources>
