<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile_caption" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_icon"
            android:title="@string/history_caption" />

        <item
            android:id="@+id/nav_vouchers"
            android:icon="@drawable/vouchers_icon"
            android:title="@string/vouchers_caption" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings_caption" />
    </group>

    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_caption" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/help_icon"
                android:title="@string/help_caption" />
        </menu>
    </item>

</menu>
