<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="feup.mieic.cmov.acme.ui.home.HomeFragment"
        android:label="@string/title_activity_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="feup.mieic.cmov.acme.ui.profile.ProfileFragment"
        android:label="@string/profile_caption"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_history"
        android:name="feup.mieic.cmov.acme.ui.history.HistoryFragment"
        android:label="@string/history_caption"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_vouchers"
        android:name="feup.mieic.cmov.acme.ui.vouchers.VouchersFragment"
        android:label="@string/vouchers_caption"
        tools:layout="@layout/fragment_vouchers" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="feup.mieic.cmov.acme.ui.contact.ContactFragment"
        android:label="@string/contact_caption"
        tools:layout="@layout/fragment_contact" />
</navigation>