<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:gravity="center"  >

    <TextView
        android:id="@+id/registerCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"
        android:text="@string/register_caption"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/nameForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:hint="Name"
                android:backgroundTint="@color/black"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:hint="E-mail"
                android:backgroundTint="@color/black"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/usernameForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:hint="@string/username"
                android:backgroundTint="@color/black"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/passwordForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:hint="@string/password"
                android:backgroundTint="@color/black"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmPasswordForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:backgroundTint="@color/black"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/birthdateInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:backgroundTint="@color/black"
                android:inputType="date" />

            <Button
                android:id="@+id/registerBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_border_shape"
                android:fontFamily="sans-serif"
                android:text="@string/register"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>