<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/brand_logo_foreground"
                android:contentDescription="@string/logo_descrp"
                />

            <TextView
                android:id="@+id/titleStr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/profileNameCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_caption"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/profileNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20sp"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileUsernameCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/profileUsernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileEmailCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_caption"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/profileEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20sp"
                android:text="TextView"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>